chapter-9: Benchmark progress towards adding a choose-size app component to the app.

--- a/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
+++ b/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
@@ -1,3 +1,5 @@
-<div>
-  choose-size works!
-</div>
+<mat-card>
+  <mat-form-field>
+    <input matInput placeholder="Input">
+  </mat-form-field>
+</mat-card>
