chapter-9: Add more fields to the choose-size component.

--- a/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
+++ b/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
@@ -1,5 +1,11 @@
-<mat-card>
+<mat-card class = "ChooseSize">
   <mat-form-field>
-    <input matInput placeholder="Input">
+    <input matInput placeholder="Columns">
+  </mat-form-field>
+  <mat-form-field>c
+    <input matInput placeholder="Rows">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Pixel Size">
   </mat-form-field>
 </mat-card>
