Add a choose-size class to container and center.

--- a/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
+++ b/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
@@ -1,8 +1,8 @@
-<mat-card class = "ChooseSize">
+<mat-card class="ChooseSize__card">
   <mat-form-field>
     <input matInput placeholder="Columns">
   </mat-form-field>
-  <mat-form-field>c
+  <mat-form-field>
     <input matInput placeholder="Rows">
   </mat-form-field>
   <mat-form-field>
