chapter-9: Add a button for create-pixel-grid.

--- a/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
+++ b/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
@@ -8,4 +8,5 @@
   <mat-form-field>
     <input matInput placeholder="Pixel Size">
   </mat-form-field>
+  <button mat-raised-button color="primary">Create Pixel Grid!</button>
 </mat-card>
