--- a/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
+++ b/apps/angular-pixel-illustrator/src/app/components/choose-size/choose-size.component.html
@@ -1,4 +1,5 @@
 <mat-card class="ChooseSize__card">
+  <mat-card-title>Choose size of Grid</mat-card-title>
   <mat-form-field>
     <input matInput placeholder="Columns">
   </mat-form-field>
